--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "ext-gd": "*",
         "darkaonline/l5-swagger": "^8.6",
         "doctrine/dbal": "^3.9",
+        "fruitcake/laravel-cors": "^3.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
